--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -1,5 +1,6 @@
 .allCategoriesBox {
   width: 300px;
-  height: 700px;
-  background-color: rgb(243, 196, 138);
+  height: 400px;
+  overflow-y: scroll;
+  background-color: bisque;
 }
