--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -1,6 +1,7 @@
 .allCategoriesBox {
-  width: 300px;
+  width: 356px;
   height: 400px;
   overflow-y: scroll;
-  background-color: bisque;
+  background-color: rgb(255, 237, 215);
+  margin-bottom: 86px;
 }
