--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 @import url('./reset.css');
 @import url('./header.css');
 @import url('./part-all-categories.css');
+@import url('./support-ukraine.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
