--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,12 +2,12 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
+         <a href="./index.html" class="a-shoppinglist">Home</a>
       </li>
-
       <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+        <a href="./shoppinglist.html" class="a-shoppinglist">Shopping list</a>
       </li>
     </ul>
   </nav>
 </header>
+
