--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -1,7 +1,7 @@
 .allCategoriesBox {
-  width: 356px;
-  height: 400px;
+  max-width: 356px;
+  height: 472px;
   overflow-y: scroll;
-  background-color: rgb(255, 237, 215);
+  background-color: rgb(248, 243, 236);
   margin-bottom: 86px;
 }
