--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,6 +20,10 @@
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
 
+  -- black-color: rgba(17, 17, 17, 1);
+  -- dark-gray: rgba(17, 17, 17, 1);
+ 
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -36,3 +40,5 @@
   display: flex;
   flex-direction: column;
 }
+
+
