--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,12 +2,18 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-         <a href="./index.html" class="a-shoppinglist">Home</a>
+        <a href="./index.html" class="a-shoppinglist a-shoppinglist-active"
+          >Home</a
+        >
       </li>
       <li class="nav-item">
         <a href="./shoppinglist.html" class="a-shoppinglist">Shopping list</a>
       </li>
     </ul>
   </nav>
+  <label class="switch">
+    <input type="checkbox" id="themeSwitch" />
+    <span class="slider"></span>
+  </label>
+  <!-- <script type="module" src="../js/header.js"></script> -->
 </header>
-
