--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,63 @@
 .header {
-  padding: 20px 0;
+  padding: 18px 20px;
+  display: flex;
+  align-items: center;
+  border-radius: 0px 0px 8px 8px;
+  border: 1.5px solid #111;
 }
 
-.nav-list {
+@media only screen and (min-width: 768px) {
+  .header {
+    padding: 27px 32px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .header {
+    padding: 27px 24px;
+  }
+}
+
+@media only screen and (max-width: 767.98px) {
+  .nav-list {
+    display: none;
+  }
+  .a-shoppinglist {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .nav-list {
+    display: flex;
+    gap: 24px;
+  }
+}
+/* .nav-list {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   gap: 40px;
+} */
+
+.a-shoppinglist {
+  color: #111;
+
+  /* font-family: DM Sans; */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.28;
+  letter-spacing: -0.56px;
+  text-transform: uppercase;
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
+.a-shoppinglist-active {
+  padding: 8px 16px;
+  background: #eac645;
+  border-radius: 36px;
+  font-weight: 700;
 }
 
 .nav-link {
@@ -18,4 +69,59 @@
 .nav-link:hover,
 .nav-link:focus {
   color: #747bff;
+}
+
+body {
+  transition: background-color 0.5s;
+}
+
+.dark-mode {
+  background-color: #202024;
+  color: #fff;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  margin-left: auto;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  width: 17px;
+  height: 17px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+/* input:checked + .slider {
+  background-color: rgba(79, 46, 232, 1), rgba(220, 220, 220, 1);
+} */
+
+input:checked + .slider:before {
+  transform: translateX(20px);
 }
