--- a/src/css/main-content-page.css
+++ b/src/css/main-content-page.css
@@ -27,7 +27,7 @@
 }
 
 .main-content-page {
-  background-color: rgb(239, 239, 240);
+  /* background-color: rgb(239, 239, 240); */
   min-width: 280px;
   width: 996px;
   max-width: 996px;
