fix&scroll rework

--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -2,9 +2,23 @@
   max-width: 307px;
   height: 228px;
   overflow-y: scroll;
+ 
   margin-bottom: 86px;
   margin-left: 20px;
   margin-top: 40px;
+ 
+}
+.allCategoriesBox::-webkit-scrollbar {
+  max-width: 8px;
+  max-height: 14px;
+}
+
+.allCategoriesBox::-webkit-scrollbar-thumb {
+  background-color: #e0e0e0;
+ 
+  border-radius: 12px;
+  width: 8px;
+ height: 14px;
 }
 
 .categoryItem:hover {
@@ -14,9 +28,19 @@
 }
 .categoryItem {
   margin-bottom: 24px;
-  color: #11111199;
+  height: 18px;
+  /*color: #11111199;*/
   text-align: left;
 }
 .categoryItem:focus {
   color: var(--violet-color);
+}
+.categoriesList{
+
+}
+.dark-mode-all-categories{
+  color:white;
+}
+.dark-mode-all-categories:hover{
+  color:white;
 }
