--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,29 @@
 <header class="header">
+  <a class="header-logo-wrapper" href="../index.html">
+    <svg class="header-logo-1" width="24" height="24">
+      <use href="../img/global/header-icons.svg#header-logo"></use>
+    </svg>
+    <svg class="header-logo-2" width="77.001" height="13.266">
+      <use href="../img/global/header-icons.svg#bookshelf-logo-2"></use>
+    </svg>
+  </a>
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
         <a href="./index.html" class="a-home a-shoppinglist-active">Home</a>
       </li>
       <li class="nav-item">
-        <a href="./shoppinglist.html" class="a-shoppinglist">Shopping list</a>
+        <a href="./shoppinglist.html" class="a-shoppinglist"
+          >Shopping list
+          <svg
+            class="shopping-bag"
+            width="
+          13.33"
+            height="16.67"
+          >
+            <use href="../img/global/header-icons.svg#shopping-bag"></use>
+          </svg>
+        </a>
       </li>
     </ul>
   </nav>
