--- a/src/css/base.css
+++ b/src/css/base.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  background-color: aqua;
 }
 main {
   flex-grow: 1;
@@ -25,7 +26,6 @@ main {
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -60,8 +60,10 @@ main {
 
 /* Desktop base styles */
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1440px) {
   .container {
-    max-width: 1280px;
+    max-width: 1440px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
