mobile menu layout + JS

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a class="header-logo-wrapper" href="../index.html">
+  <a class="header-logo-wrapper" href="./index.html">
     <svg class="header-logo-1" width="24" height="24">
       <use href="./img/global/header-icons.svg#header-logo"></use>
     </svg>
@@ -31,4 +31,31 @@
     <input type="checkbox" id="themeSwitch" />
     <span class="slider"></span>
   </label>
+  <button type="button" class="open-menu-btn">
+    <svg class="burger-menu-icon" width="28" height="28">
+      <use href="./img/global/header-icons.svg#burger-menu"></use>
+    </svg>
+  </button>
+  <button type="button" class="close-menu-btn">
+    <svg class="mobile-close-icon" width="28" height="28">
+      <use href="./img/global/icons.svg#icon-x-close"></use>
+    </svg>
+  </button>
+
+  <!-- Mobile menu -->
+
+  <div class="menu-data-modile" data-menu>
+    <div class="menu-mobile-content">
+      <a class="home-mobile a-shoppinglist-active" href="./index.html">HOME</a>
+      <a class="shopping-mobile" href="./shoppinglist.html"
+        >SHOPPING LIST<svg
+          class="shopping-bag-mobile"
+          width="
+      13.33"
+          height="16.67"
+        >
+          <use href="./img/global/header-icons.svg#shopping-bag"></use></svg
+      ></a>
+    </div>
+  </div>
 </header>
