--- a/src/css/header.css
+++ b/src/css/header.css
@@ -6,6 +6,8 @@
   border-radius: 0px 0px 8px 8px;
   border: 1.5px solid #111;
   transition: background-color 0.5s;
+  position: relative;
+  /* z-index: 10; */
 }
 
 @media only screen and (min-width: 768px) {
@@ -168,6 +170,10 @@ input:checked + .slider:before {
   transform: translateX(19px);
 }
 
+input:checked + .burger-menu-icon {
+  fill: #fff;
+}
+
 .header-logo-wrapper {
   display: flex;
   align-items: center;
@@ -189,4 +195,99 @@ input:checked + .slider:before {
 }
 .header-logo-2 {
   transition: fill 500ms;
+}
+
+.open-menu-btn {
+  border: none;
+  background-color: inherit;
+  padding: 0;
+  margin-left: 14px;
+}
+
+.close-menu-btn {
+  border: none;
+  background-color: inherit;
+  padding: 0;
+  margin-left: 14px;
+}
+
+@media only screen and (min-width: 768px) {
+  .open-menu-btn {
+    display: none;
+  }
+}
+
+.burger-menu-icon {
+  fill: rgba(17, 17, 17, 1);
+  transition: fill 500ms;
+}
+
+.burger-menu-icon-dark {
+  fill: #fff;
+}
+
+/* Mobile-menu */
+
+.menu-data-modile {
+  position: absolute;
+  display: none;
+  background: linear-gradient(rgba(79, 46, 232, 1), rgba(255, 255, 255, 1));
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  height: 100vh;
+  top: 69px;
+  z-index: 10;
+}
+
+.menu-mobile-content {
+  display: flex;
+  flex-direction: column;
+  padding-top: 183px;
+  align-items: flex-start;
+  gap: 16px;
+  padding-left: 109px;
+}
+
+.home-mobile {
+  color: #111;
+
+  font-family: DM Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: -0.56px;
+  text-transform: uppercase;
+}
+.shopping-mobile {
+  color: #fff;
+
+  font-family: DM Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: -0.56px;
+  text-transform: uppercase;
+  display: flex;
+  gap: 4px;
+}
+
+.shopping-bag-mobile {
+  fill: #fff;
+}
+
+.mobile-close-icon {
+  stroke: rgba(17, 17, 17, 1);
+  transition: stroke 500ms;
+}
+
+.mobile-close-icon-dark {
+  stroke: #fff;
+}
+
+.close-menu-btn {
+  display: none;
 }
