--- a/src/css/support-ukraine.css
+++ b/src/css/support-ukraine.css
@@ -9,3 +9,45 @@
   );
   box-shadow: 0px 10px 10px 0px rgba(245, 245, 247, 0.1);
 }
+
+.pharag {
+font: DM Sans;
+weight: 700;
+size: 22px;
+line height: 24px;
+letter-spacing: -4%;
+}
+
+.name {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 193px;
+    min-height: 32px;
+    gap: 12px;
+    margin-left: 40px;
+    margin-top: 24px;
+  }
+
+  .trizyb {
+
+  }
+
+  .image { 
+  display: flex;
+  min-width: 159px;
+  min-height: 292px;
+  gap: 20px;
+  align-items: center;
+  margin-left: 40px;
+  margin-top: 96px;
+  }
+
+  .button {
+    display: flex;
+    min-width: 32px;
+    min-height: 32px;
+    margin-left: 184px;
+    margin-top: 408px;
+    rotation: -90°;
+  }
