--- a/src/css/support-ukraine.css
+++ b/src/css/support-ukraine.css
@@ -1,6 +1,6 @@
 .box-support-ukraine {
-  width: 356px;
-  height: 474px;
+  width: 335px;
+  height: 460px;
   border-radius: 16px;
   background: radial-gradient(
     189.32% 190.93% at 59.76% -23.42%,
@@ -8,6 +8,23 @@
     #fff 100%
   );
   box-shadow: 0px 10px 10px 0px rgba(245, 245, 247, 0.1);
+  margin-top: 372px;
+  margin-left: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .box-support-ukraine {
+    height: 474px;
+    margin-top: 112px;
+    margin-left: 401px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .box-support-ukraine {
+  width: 356px;
+  margin-top: 670px;
+  margin-left: 24px;
+  }
 }
 
 .pharag {
@@ -16,6 +33,13 @@ weight: 700;
 size: 22px;
 line height: 24px;
 letter-spacing: -4%;
+}
+
+@media only screen and (min-width: 768px) {
+  .pharag {
+    size: 24px;
+    line height: 28px;
+  }
 }
 
 .name {
@@ -27,6 +51,12 @@ letter-spacing: -4%;
     gap: 12px;
     margin-left: 40px;
     margin-top: 24px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    .name {
+      min-width: 208px;
+    }
   }
 
   .trizyb {
@@ -50,4 +80,21 @@ letter-spacing: -4%;
     margin-left: 184px;
     margin-top: 408px;
     rotation: -90°;
+  }
+
+  @media only screen and (min-width: 768px) {
+    .button {
+      min-width: 38px;
+      min-height: 38px;
+      margin-left: 187px;
+      margin-top: 412px;
+    }
+  }
+  @media only screen and (min-width: 1440px) {
+    .button {
+      min-width: 38px;
+      min-height: 38px;
+      margin-left: 197px;
+      margin-top: 412px;
+    }
   }
