--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -1,39 +1,38 @@
-.allCategoriesBox {
-  max-width: 307px;
+.all-categories-box {
+  min-width: 280px;
+  width: 335px;
   height: 228px;
   overflow-y: scroll;
- 
-  margin-bottom: 86px;
-  margin-left: 20px;
-  margin-top: 40px;
- 
-}
-.allCategoriesBox::-webkit-scrollbar {
-  max-width: 8px;
-  max-height: 14px;
- 
+
+  margin-bottom: 40px;
+  /* margin-left: 20px;
+  margin-top: 40px; */
 }
 
-.allCategoriesBox::-webkit-scrollbar-thumb {
+.all-categories-box::-webkit-scrollbar {
+  max-width: 8px;
+  max-height: 14px;
+}
+
+.all-categories-box::-webkit-scrollbar-thumb {
   background-color: #e0e0e0;
   border-radius: 12px;
   width: 8px;
- height: 14px;
+  height: 14px;
 }
 
-.categoryItem:hover {
+.category-item:hover {
   color: var(--violet-color);
   text-transform: uppercase;
   font-weight: 700;
-  transition:  50ms;
+  transition: 50ms;
 }
-.categoryItem {
+.category-item {
   margin-bottom: 24px;
   height: 18px;
   /*color: #11111199;*/
   text-align: left;
- 
 }
-.categoryItem:focus {
+.category-item:focus {
   color: var(--violet-color);
 }
