--- a/src/partials/part-all-categories.html
+++ b/src/partials/part-all-categories.html
@@ -1,3 +1,3 @@
-<div class="allCategoriesBox">
-    <ul class="categoriesList"></ul>
+<div class="all-categories-box">
+    <ul class="categories-list"></ul>
 </div>
