--- a/src/css/main-content-page.css
+++ b/src/css/main-content-page.css
@@ -32,6 +32,13 @@
 .box-support-ukraine {
   width: 100%;
   height: 460px;
+  border-radius: 16px;
+  background: radial-gradient(
+    189.32% 190.93% at 59.76% -23.42%,
+    #4f2ee8 18.03%,
+    #fff 100%
+  );
+  box-shadow: 0px 10px 10px 0px rgba(245, 245, 247, 0.1);
 }
 @media only screen and (min-width: 768px) {
   .all-categories-box {
