--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -1,39 +1,84 @@
+/*All categories box*/
 .allCategoriesBox {
   max-width: 307px;
-  height: 228px;
+  max-height: 228px;
   overflow-y: scroll;
- 
-  margin-bottom: 86px;
-  margin-left: 20px;
-  margin-top: 40px;
- 
 }
 .allCategoriesBox::-webkit-scrollbar {
   max-width: 8px;
   max-height: 14px;
- 
 }
 
 .allCategoriesBox::-webkit-scrollbar-thumb {
   background-color: #e0e0e0;
   border-radius: 12px;
   width: 8px;
- height: 14px;
+  height: 14px;
 }
+@media only screen and (min-width: 768px) {
+  .allCategoriesBox {
+    max-width: 309px;
+    max-height: 472px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .allCategoriesBox {
+    max-width: 356px;
+    max-height: 472px;
+  }
+}
+/*Category item */
 
+.categoryItem {
+  font-family: DM Sans;
+  height: 18px;
+  /*color: #11111199;*/
+  text-align: left;
+}
 .categoryItem:hover {
   color: var(--violet-color);
   text-transform: uppercase;
   font-weight: 700;
-  transition:  50ms;
+  transition: 50ms;
 }
-.categoryItem {
-  margin-bottom: 24px;
-  height: 18px;
-  /*color: #11111199;*/
-  text-align: left;
- 
+.categoryItem:checked {
+  color: var(--violet-color);
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.categoryItem.active {
+  color: var(--violet-color);
+  text-transform: uppercase;
+  font-weight: 700;
 }
 .categoryItem:focus {
   color: var(--violet-color);
+}
+@media only screen and (min-width: 768px) {
+  .categoryItem {
+    height: 24px;
+    /*color: #11111199;*/
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .categoryItem {
+    height: 24px;
+    /*color: #11111199;*/
+  }
+}
+/* Categories list*/
+.categoriesList {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+@media only screen and (min-width: 768px) {
+  .categoriesList {
+    gap: 32px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .categoriesList {
+    gap: 32px;
+  }
 }
