--- a/src/css/support-ukraine.css
+++ b/src/css/support-ukraine.css
@@ -1,1 +1,72 @@
 
+.pharag {
+  font: DM Sans;
+  weight: 700;
+  size: 22px;
+  line-height: 24px;
+  letter-spacing: -4%;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .pharag {
+      size: 24px;
+      line-height: 28px;
+    }
+  }
+  
+  .name {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      min-width: 193px;
+      min-height: 32px;
+      gap: 12px;
+      margin-left: 40px;
+      margin-top: 24px;
+    }
+  
+    @media only screen and (min-width: 768px) {
+      .name {
+        min-width: 208px;
+      }
+    }
+  
+    .trizyb {
+  
+    }
+  
+    .image { 
+    display: flex;
+    min-width: 159px;
+    min-height: 292px;
+    gap: 20px;
+    align-items: center;
+    margin-left: 40px;
+    margin-top: 96px;
+    }
+  
+    .button {
+      display: flex;
+      min-width: 32px;
+      min-height: 32px;
+      margin-left: 184px;
+      margin-top: 408px;
+      rotation: -90°;
+    }
+  
+    @media only screen and (min-width: 768px) {
+      .button {
+        min-width: 38px;
+        min-height: 38px;
+        margin-left: 187px;
+        margin-top: 412px;
+      }
+    }
+    @media only screen and (min-width: 1440px) {
+      .button {
+        min-width: 38px;
+        min-height: 38px;
+        margin-left: 197px;
+        margin-top: 412px;
+      }
+    }
