--- a/src/css/header.css
+++ b/src/css/header.css
@@ -231,13 +231,20 @@ input:checked + .burger-menu-icon {
 .menu-data-modile {
   position: absolute;
   display: none;
-  background: linear-gradient(rgba(79, 46, 232, 1), rgba(255, 255, 255, 1));
-  top: 0;
+  background-image: url(../img/global/books-mobile-bg-2x.png),
+    radial-gradient(
+      189.32% 190.93% at 59.76% -23.42%,
+      #4f2ee8 18.03%,
+      #fff 100%
+    );
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  top: 69px;
   left: 0;
   width: 100%;
-
   height: 100vh;
-  top: 69px;
+
   z-index: 10;
 }
 
