--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -20,6 +20,21 @@
   width: 8px;
   height: 14px;
 }
+@media only screen and (min-width: 768px) {
+  .all-categories-box {
+    overflow-y: scroll;
+  }
+}
+
+.category-item {
+  font-size: 16px;
+  line-height: 18px;
+  /*color: #11111199;*/
+  text-align: left;
+}
+.category-item:focus {
+  color: var(--violet-color);
+}
 
 .category-item:hover {
   color: var(--violet-color);
@@ -27,12 +42,33 @@
   font-weight: 700;
   transition: 50ms;
 }
-.category-item {
-  margin-bottom: 24px;
-  height: 18px;
-  /*color: #11111199;*/
-  text-align: left;
+
+@media only screen and (min-width: 768px) {
+  .category-item {
+    font-size: 16px;
+    line-height: 24px;
+    /*color: #11111199;*/
+    text-align: left;
+  }
 }
-.category-item:focus {
-  color: var(--violet-color);
+@media only screen and (min-width: 768px) {
+
+  .category-item:hover {
+    color: var(--violet-color);
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: 50ms;
+  }
 }
+
+.categories-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+@media only screen and (min-width: 768px) {
+  .categories-list {
+    gap: 32px;
+  }
+}
+
