--- a/src/partials/support-ukraine.html
+++ b/src/partials/support-ukraine.html
@@ -3,10 +3,10 @@
     <h2 class="pharag">Support Ukraine</h2>
     <img
                       srcset="
-                        ./img/support-ukraine/Vector1x.png 1x,
-                        ./img/support-ukraine/Vector2x.png 2x
+                        ./img/support-ukraine/Vector-1x.png 1x,
+                        ./img/support-ukraine/Vector-2x.png 2x
                       "
-                      src="./img/support-ukraine/Vector1x.png"
+                      src="./img/support-ukraine/Vector-1x.png"
                       alt="Trizyb"
                       width="20"
                       height="32" class="trizyb"
@@ -14,7 +14,7 @@
 </div>
 <div class="image">
 <ul>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/1-1x.png 1x,
           ./img/support-ukraine/1-2x.png 2x
@@ -24,7 +24,7 @@
         width="159"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/2-1x.png 1x,
           ./img/support-ukraine/2-2x.png 2x
@@ -34,7 +34,7 @@
         width="96"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/3-1x.png 1x,
           ./img/support-ukraine/3-2x.png 2x
@@ -44,7 +44,7 @@
         width="137"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/4-1x.png 1x,
           ./img/support-ukraine/4-2x.png 2x
@@ -54,7 +54,7 @@
         width="137"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/5-1x.png 1x,
           ./img/support-ukraine/5-2x.png 2x
@@ -64,7 +64,7 @@
         width="89"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/6-1x.png 1x,
           ./img/support-ukraine/6-2x.png 2x
@@ -74,7 +74,7 @@
         width="149"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/7-1x.png 1x,
           ./img/support-ukraine/7-2x.png 2x
@@ -84,7 +84,7 @@
         width="127"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/8-1x.png 1x,
           ./img/support-ukraine/8-2x.png 2x
@@ -94,7 +94,7 @@
         width="119"
         height="32" 
       /></li>
-    <li><img
+    <li class="spisok"><img
         srcset="
           ./img/support-ukraine/9-1x.png 1x,
           ./img/support-ukraine/9-2x.png 2x
@@ -106,7 +106,7 @@
       /></li>
 </ul>
 </div>
-<button class="button"><img
+<button type="button" class="btn" width="32" height="32"><img
     srcset="
       ./img/support-ukraine/slider.png,
     "
