location script + css fix

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -51,19 +51,20 @@
 } */
 
 .a-home {
-  color: #111;
+  /* color: #111; */
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: 1.28;
   letter-spacing: -0.56px;
   text-transform: uppercase;
-  padding-top: 18px;
-  padding-bottom: 18px;
+  transition: color 0.5s;
+  /* padding-top: 18px;
+  padding-bottom: 18px; */
 }
 
 .a-shoppinglist {
-  color: #111;
+  /* color: #111; */
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -72,13 +73,6 @@
   text-transform: uppercase;
 
   transition: color 0.5s;
-}
-
-.a-shoppinglist-active {
-  padding: 8px 16px;
-  background: #eac645;
-  border-radius: 36px;
-  font-weight: 700;
 }
 
 .nav-link {
@@ -182,6 +176,8 @@ input:checked + .burger-menu-icon {
 
 .nav-item {
   font-size: 14px;
+  display: flex;
+  align-items: center;
 }
 
 .a-shoppinglist {
@@ -226,6 +222,11 @@ input:checked + .burger-menu-icon {
   fill: #fff;
 }
 
+.burger-menu-icon:hover,
+.burger-menu-icon:focus {
+  fill: rgba(79, 46, 232, 1);
+}
+
 /* Mobile-menu */
 
 .menu-data-modile {
@@ -258,12 +259,12 @@ input:checked + .burger-menu-icon {
 }
 
 .home-mobile {
-  color: #111;
+  color: #fff;
 
   font-family: DM Sans;
   font-size: 14px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 18px;
   letter-spacing: -0.56px;
   text-transform: uppercase;
@@ -295,6 +296,26 @@ input:checked + .burger-menu-icon {
   stroke: #fff;
 }
 
+.mobile-close-icon:hover,
+.mobile-close-icon:focus {
+  stroke: rgba(79, 46, 232, 1);
+}
+
 .close-menu-btn {
   display: none;
+}
+
+.a-home-active {
+  color: #111;
+  padding: 8px 16px;
+  background: #eac645;
+  border-radius: 36px;
+  font-weight: 700;
+}
+.a-shopping-active {
+  color: #111;
+  padding: 7px 16px;
+  background: #eac645;
+  border-radius: 36px;
+  font-weight: 700;
 }
