--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,7 @@
 @import url('./shopping-list.css');
 @import url('./main-content-page.css');
 @import url('./authorization.css');
+@import url('./back-to-top.css');
 
 :root {
   font-family: 'DM Sans', sans-serif;
