--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -75,7 +75,11 @@
 }
 .shopping-list-card-flex {
   display: flex;
+  justify-content: space-between;
   margin: 14px;
+  @media screen and (min-width: 768px) {
+    margin: 24px;
+  }
 }
 .list-card-img {
   margin-right: 14px;
@@ -83,12 +87,15 @@
   height: 142px;
   border-radius: 8px;
   @media screen and (min-width: 768px) {
-    margin-right: 24px;
     width: 116px;
     height: 165px;
   }
 }
-
+.shop-trash-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 .list-card-title {
   font-weight: 700;
   font-size: 16px;
@@ -98,11 +105,40 @@
     font-size: 16px;
   }
 }
+.shop-trash-bg {
+  background-color: var(--violet-color);
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  padding: 6px;
+  @media screen and (min-width: 768px) {
+    width: 34px;
+    height: 34px;
+    padding: 8px;
+  }
+}
+.shop-trash {
+  width: 16px;
+  height: 16px;
+  @media screen and (min-width: 768px) {
+    width: 18px;
+    height: 18px;
+  }
+}
 .list-card-subtitle {
   margin-top: 4px;
   font-weight: 400;
   font-size: 12px;
   color: #b4afaf;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
+}
+.shop-text-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 8px;
 }
 .list-card-text {
   width: 193px;
@@ -113,14 +149,11 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 
-  margin-top: 8px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-
   @media screen and (min-width: 768px) {
     width: 508px;
-    margin-top: 14px;
   }
   @media screen and (min-width: 1200px) {
     width: 808px;
@@ -129,26 +162,53 @@
 .list-card-flex {
   display: flex;
   justify-content: space-between;
-  margin-top: 16px;
-  @media screen and (min-width: 768px) {
-    margin-top: 35px;
-  }
 }
 .list-card-contributor {
   font-style: italic;
   font-weight: 400;
   font-size: 12px;
   color: #b4afaf;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
+}
+.list-card-icon-flex {
+  display: flex;
+  align-items: center;
 }
 .list-card-amazon-url {
   width: 32px;
   height: 11px;
   display: inline-block;
-  background-color: green;
+  background-image: url('../img/shopping/am_grey.png');
+  background-size: contain;
+  @media screen and (min-width: 768px) {
+    width: 48px;
+    height: 15px;
+  }
+}
+.list-card-amazon-url:hover,
+.list-card-amazon-url:active {
+  background-image: url('../img/shopping/am.png');
+  mix-blend-mode: luminosity;
+  filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 }
 .list-card-book-url {
   width: 16px;
   height: 16px;
   display: inline-block;
-  background-color: green;
+  margin-left: 8px;
+  background-image: url('../img/shopping/book_grey.png');
+  background-size: contain;
+  @media screen and (min-width: 768px) {
+    width: 28px;
+    height: 28px;
+    margin-left: 16px;
+  }
+}
+.list-card-book-url:hover,
+.list-card-book-url:active {
+  background-image: url('../img/shopping/book.png');
+  mix-blend-mode: luminosity;
+  filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 }
