--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./index.html" class="a-home">Home</a>
+        <a href="./index.html" class="a-home a-home-active">Home</a>
       </li>
       <li class="nav-item">
         <a href="./shoppinglist.html" class="a-shoppinglist"
@@ -46,7 +46,7 @@
 
   <div class="menu-data-modile" data-menu>
     <div class="menu-mobile-content">
-      <a class="home-mobile" href="./index.html">HOME</a>
+      <a class="home-mobile a-home-active" href="./index.html">HOME</a>
       <a class="shopping-mobile" href="./shoppinglist.html"
         >SHOPPING LIST<svg
           class="shopping-bag-mobile"
