--- a/src/partials/popup-menu.html
+++ b/src/partials/popup-menu.html
@@ -1,1 +1,4 @@
-<div class="box-popup-menu hidden"></div>
+    <div class="backdrop-popup-menu hidden">
+    <div class="box-popup-menu hidden"></div>
+    </div>
+
